--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "easthomes",
   "version": "0.1.0",
-  "private": true,
+  "private": true,"engines": {
+    "node": "14.x"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
